--- a/cifs-debug.ds.yaml
+++ b/cifs-debug.ds.yaml
@@ -15,6 +15,17 @@ spec:
       containers:
         - name: cifs-credits-diag
           image: alpine:latest
+          livenessProbe:
+            exec:
+              command:
+              - bash
+              - -c
+              - |
+                  disk_usage=$(df -h / | awk '{print $5}' | tail -n 1)
+                  disk_usage_percent=${disk_usage%%%}
+                  if [[ $disk_usage_percent > 50 ]]; then exit 199; fi
+            initialDelaySeconds: 5
+            periodSeconds: 10
           command:
             - nsenter
             - --target
